# listam-hardware

./: .gitignore  README.md
esp32-s3-listam-bridge/: README.md
esp32-s3-listam-bridge/bridge/: index.js  package-lock.json  package.json
esp32-s3-listam-bridge/firmware/: platformio.ini
esp32-s3-listam-bridge/firmware/src/: main.cpp
leaf-peer/: Cargo.toml  README.md
leaf-peer/bridge-js/: e2e-phase2.mjs  e2e.mjs  gen-vectors.mjs  persist-test.mjs  spike-client.mjs  spike-server.mjs
leaf-peer/docs/: mobile-bridge-plan.md  wake-word-plan.md
leaf-peer/leaf-core/: Cargo.toml
leaf-peer/leaf-core/src/: lib.rs  mirror.rs
leaf-peer/leaf-esp32/: .gitignore  Cargo.toml  cfg.toml.example  partitions.csv  sdkconfig.defaults
leaf-peer/leaf-esp32/.cargo/: config.toml
leaf-peer/leaf-esp32/components/leaf_prov/: CMakeLists.txt  leaf_prov.c  leaf_prov.h
leaf-peer/leaf-esp32/components/mww/: CMakeLists.txt  mww.cc  mww.h
leaf-peer/leaf-esp32/src/: config.rs  led.rs  main.rs  provisioning.rs  voice.rs
leaf-peer/leaf-esp32/wakeword/: petito.json  petito.tflite  yo.json  yo.tflite  yo_petito.json  yo_petito.tflite
leaf-peer/leaf-host/: Cargo.toml
leaf-peer/leaf-host/src/: main.rs
leaf-peer/testdata/: vectors.json
