[package]
name = "leaf-esp32"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "listam leaf peer firmware for ESP32-S3 (esp-idf std)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "leaf-esp32"
harness = false

[profile.release]
opt-level = "s"
lto = "thin"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
leaf-core = { path = "../leaf-core", default-features = false }
esp-idf-svc = { version = "0.51", features = ["binstart"] }
# Re-exported by esp-idf-svc as `esp_idf_svc::hal`; declared directly only to
# enable the legacy RMT driver (TxRmtDriver/FixedLengthSignal) that drives the
# onboard WS2812 RGB LED on ESP-IDF v5.
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
log = "0.4"
anyhow = "1"
futures = "0.3"
async-io = "2"
hex = "0.4"
toml-cfg = "0.2"
# Decode the BLE provisioning payload (JSON) written into NVS. Flash budget is
# ample (~3MB free); serde_json is the least error-prone way to parse it.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embuild = "0.33"
toml-cfg = "0.2"

# --- On-device wake word (microWakeWord "yo") ---
# Pull Espressif's TFLite-Micro port + our C-ABI shim (components/mww) so the
# leaf can run the int8 streaming model as a first-stage filter behind the dB
# gate. esp-nn is bundled (S3 SIMD). Pin if a future esp-nn bump breaks the arena.
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-tflite-micro", version = "1.*" }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/mww"]
bindings_header = "components/mww/mww.h"
bindings_module = "mww"

# --- BLE provisioning (NimBLE GATT) ---
# A tiny C shim over NimBLE exposing a custom provisioning GATT service; bound
# into Rust as `esp_idf_svc::sys::leaf_prov`. Needs BT/NimBLE enabled in
# sdkconfig.defaults. See components/leaf_prov/ and src/provisioning.rs.
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/leaf_prov"]
bindings_header = "components/leaf_prov/leaf_prov.h"
bindings_module = "leaf_prov"

# Same vendored hypercore stack as the host workspace.
[patch.crates-io]
hypercore = { path = "../vendor/hypercore", default-features = false }
hypercore-protocol = { path = "../vendor/hypercore-protocol" }
hypercore_schema = { path = "../vendor/hypercore_schema" }
snow = { path = "../vendor/snow" }
# Panics via todo!() on ESP-IDF's NotConnected socket errors in multi-channel
# sessions; vendored to recover instead of aborting the leaf thread.
hypercore_handshake = { path = "../vendor/hypercore_handshake" }
